# lastz-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/lastz/: CMakeLists.txt
src/lastz/src/: lastz.c
tiny/: Makefile  README.md
tiny/src/: streamer.cpp  streams.c  streams.h
